refactor: refactor shouldAcceptTrucoIfIHaveAThreeAndManilhaInHandAndWinTheFirstRound test to use mock